# Memoria_V2

./: CMakeLists.txt  CacheFileParser.cpp  CacheFileParser.h  DatabaseManager.cpp  DatabaseManager.h  FFmpeg_module.cpp  FFmpeg_module.h  README.md  TaskQueue.cpp  TaskQueue.h  cachefileparser.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  utils.h
FFmpeg_tools/: README.txt
FFmpeg_tools/doc/: ffmpeg-all.html  ffmpeg-filters.html  ffplay-all.html  ffprobe-all.html
